Cambio en CapacityFilter